Dashboard Start - Create Stats Component - Change structure and scafolding for migrate style web for SPA Saas - Change routing for new App System

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div id="main">
+<!-- <div id="main">
     
     <app-header></app-header>
         <section class="overflow-y-auto
@@ -14,5 +14,6 @@
                 <app-snackbar></app-snackbar>
             </router-outlet>
         </section>
-    <!-- <app-footer></app-footer> -->
-</div>
+</div> -->
+
+<router-outlet class="z-20" />
