--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -3,7 +3,7 @@
     <div class="grid grid-cols-1 md:grid-cols-3 items-center gap-5">
       <div>
         <!-- <a class="flex-none text-xl font-semibold text-black dark:text-white" href="#" aria-label="Brand">Brand</a> -->
-        <app-logo-aitrain [render]="'footer'"></app-logo-aitrain>
+        <app-logo-aitrain />
       </div>
       <!-- End Col -->
       <div class="text-center">
