--- a/src/app/auth/components/side-login/side-login.component.html
+++ b/src/app/auth/components/side-login/side-login.component.html
@@ -1,6 +1,7 @@
 <!-- Hero -->
-<div class="relative overflow-hidden max-h-full">
-    <div class="mx-auto max-w-screen-md py-6 px-4 sm:px-6 md:max-w-screen-xl md:py-16 lg:py-20 md:px-8 h-fit">
+<div class="overflow-hidden max-h-full">
+
+    <div class="mx-auto max-w-screen-md py-6 px-4 sm:px-6 md:max-w-screen-xl md:py-16 lg:py-10 md:px-8 h-fit">
       <div class="md:pe-8 md:w-1/2 xl:pe-0 xl:w-5/12">
         
         <app-logo-aitrain addClass="mb-8" style="text-align: -webkit-center"/> 
@@ -17,12 +18,13 @@
           </p>
         </div>
     
-        <div class="mt-5">
-          <div #googleBtn class="py-3 px-4">
-          </div> 
-    
-          <div class="py-3 flex items-center text-xs text-gray-400 uppercase before:flex-1 before:border-t before:border-gray-200 before:me-6 after:flex-1 after:border-t after:border-gray-200 after:ms-6 dark:text-neutral-500 dark:before:border-neutral-600 dark:after:border-neutral-600">Or</div>
-    
+        <div class="mt-5 h-full">
+          @if(componentState !== 'recovery'){
+            <div #googleBtn class="py-3 px-4 flex flex-col-1 justify-center">
+            </div> 
+      
+            <div class="py-3 flex items-center text-xs text-gray-400 uppercase before:flex-1 before:border-t before:border-gray-200 before:me-6 after:flex-1 after:border-t after:border-gray-200 after:ms-6 dark:text-neutral-500 dark:before:border-neutral-600 dark:after:border-neutral-600">Or</div>
+          }
            @if(componentState === 'login'){
             <app-login [(formState)]="componentState" />
            }
@@ -34,10 +36,17 @@
            @if(componentState === 'recovery'){
               <app-recovery />
            }
+
         </div>
       </div>
     </div>
 
-    <div class="hidden md:block md:absolute md:top-0 md:start-1/2 md:end-0 h-full bg-no-repeat bg-center bg-cover"  style="background-image: linear-gradient(#25caebaf, #5e17d8b6), url(assets/img/training-ai-using-aitrain.jpg)">
+    <div class="hidden md:block md:absolute md:top-0 md:start-1/2 md:end-0 h-full bg-no-repeat bg-center bg-black lines">
+      <div class="line"></div>
+      <div class="line"></div>
+      <div class="line"></div>
+      <div class="flex flex-col h-full place-items-center justify-center">
+        <svg class="h-24 w-24  self-center align-middle" width="100%" height="100%" viewBox="0 0 925 827" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xml:space="preserve" xmlns:serif="http://www.serif.com/" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linejoin:round;stroke-miterlimit:2;"><g><path d="M758.324,823.628l-291.852,-823.628l-174.646,0l0.45,1.211l-292.276,824.824l167.566,-0l106.814,-315.189l18.203,-508.808l226.991,611.435l71.982,212.408l333.006,-0l-0,-825.881l-166.238,0l-0,823.628Z" style="fill:#fff;fill-rule:nonzero;"/></g></svg>
+      </div>
     </div>
   </div>
